--- a/index.html
+++ b/index.html
@@ -116,27 +116,27 @@
                         <a href="" target="_blank">2469278741</a>
                     </li>
                     <li>
-                        <label>手机</label>
+                        <label><b>手机</b></label>
                         <a href="tel:17717299170" target="_blank">17717299170</a>
                     </li>
                     <li>
-                        <label>邮箱</label>
+                        <label><b>邮箱</b></label>
                         <a href="mailto:2469278741@qq.com" target="_blank">2469278741@qq.com</a>
                     </li>
                     <li>
-                        <label>个人主页</label>
+                        <label><b>个人主页</b></label>
                         <a href="http://139.224.137.74:8080/" target="_blank">http://139.224.137.74:8080/</a>
                     </li>
                     <li>
-                        <label>码云</label>
+                        <label><b>码云</b></label>
                         <a href="https://gitee.com/java_wxid" target="_blank">https://gitee.com/java_wxid</a>
                     </li>
                     <li>
-                        <label>Github</label>
+                        <label><b>Github</b></label>
                         <a href="https://github.com/javaliao" target="_blank">https://github.com/javaliao</a>
                     </li>
                     <li>
-                        <label>CSDN</label>
+                        <label><b>CSDN</b></label>
                         <a href="https://blog.csdn.net/java_wxid" target="_blank">https://blog.csdn.net/java_wxid</a>
                     </li>
                 </ul>
