--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                 <hr/>
                 <p>很多人给IT男贴标签，认为IT男闷，宅，忙，无趣，轴，直男，单纯，工资高，青春饭等。</p>
                 <p>接触下来他们是自律，爱学习，认真，有目标感，有使命感，努力，上进。</p>
-                <p>请善待每一个IT男，因为他们都有一颗忙到没有时间出轨的爱你的心，他们可能没你那么懂生活，因为他们有虚拟世界里的悲伤和孤独。</p>
+                <p>请善待每一个IT男，他们可能没你那么懂生活，因为他们有虚拟世界里的悲伤和孤独。</p>
                 <p>本人自学能力强，思维敏捷，对于新知识接受快。</p>
                 <p>为人诚恳，待人真诚，具有良好的团队合作精神和沟通组织能力，工作积极上进。</p>
                 <p>能接受加班，能接受出差，乐于接受新技术，期待技术提高。</p>
