--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@
                         <label>QQ</label>
                         <a href="" target="_blank">2469278741</a>
                     </li>
-                    <li>
-                        <label><b>手机</b></label>
-                        <a href="tel:17717299170" target="_blank">17717299170</a>
-                    </li>
+<!--                    <li>-->
+<!--                        <label><b>手机</b></label>-->
+<!--                        <a href="tel:17717299170" target="_blank">17717299170</a>-->
+<!--                    </li>-->
                     <li>
                         <label><b>邮箱</b></label>
                         <a href="mailto:2469278741@qq.com" target="_blank">2469278741@qq.com</a>
@@ -165,14 +165,14 @@
                             <span>湖南电子科技职业学院 - 软件工程专业（大专）</span>
                             <time>2017.03.07-2019.06.30</time>
                         </h3>
-                        <p>证书编号<mark>141225201906001202</mark></p>
+<!--                        <p>证书编号<mark>141225201906001202</mark></p>-->
                     </li>
                     <li>
                         <h3>
                             <span>湖南工商大学 - 人力资源管理专业（本科）</span>
                             <time>2017.03.07-2019.12.30</time>
                         </h3>
-                        <p>证书编号<mark>65439117162003928</mark></p>
+<!--                        <p>证书编号<mark>65439117162003928</mark></p>-->
                     </li>
                 </ul>
             </section>
