--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     </li>
                     <li>
                         <label><b>CSDN</b></label>
-                        <a href="https://blog.csdn.net/java_wxid" target="_blank">https://blog.csdn.net/java_wxid</a>
+                        <a href="https://blog.csdn.net/java_wxid" target="_blank">java小丑</a>
                     </li>
                 </ul>
             </section>
@@ -251,17 +251,17 @@
             <time>2020年09月29日</time>.</p>
     </footer>
 
-<!--    &lt;!&ndash; 侧栏 &ndash;&gt;-->
-<!--    <aside>-->
-<!--        <ul>-->
-<!--            <li>-->
-<!--                <a href="https://gitee.com/itsay/resume" target="_blank">源代码</a>-->
-<!--            </li>-->
-<!--            <li>-->
-<!--                <a href="http://if2er.com/" target="_blank">Blog</a>-->
-<!--            </li>-->
-<!--        </ul>-->
-<!--    </aside>-->
+    <!-- 侧栏 -->
+    <aside>
+        <ul>
+            <li>
+                <a href="https://github.com/BoomManager/BoomManager.github.io" target="_blank">源代码</a>
+            </li>
+            <li>
+                <a href="http://139.224.137.74:8080/" target="_blank">动态网站</a>
+            </li>
+        </ul>
+    </aside>
 
     <script src="./assets/js/index.js"></script>
 </body>
