--- a/index.html
+++ b/index.html
@@ -125,15 +125,15 @@
                     </li>
                     <li>
                         <label><b>个人主页</b></label>
-                        <a href="http://139.224.137.74:8080/" target="_blank">http://139.224.137.74:8080/</a>
+                        <a href="http://139.224.137.74:8080/" target="_blank">动态网站</a>
                     </li>
                     <li>
                         <label><b>码云</b></label>
-                        <a href="https://gitee.com/java_wxid" target="_blank">https://gitee.com/java_wxid</a>
+                        <a href="https://gitee.com/java_wxid" target="_blank">java_wxid</a>
                     </li>
                     <li>
                         <label><b>Github</b></label>
-                        <a href="https://github.com/javaliao" target="_blank">https://github.com/javaliao</a>
+                        <a href="https://github.com/javaliao" target="_blank">javaliao</a>
                     </li>
                     <li>
                         <label><b>CSDN</b></label>
