--- a/index.html
+++ b/index.html
@@ -224,7 +224,6 @@
                 <p> 熟练掌握JUC并发包，比如：循环栅栏，信号灯，倒计时器等。 在项目中解决过各种分布式场景的技术难题，比如分布式锁，分布式事务。</p>
                 <p> 熟练掌握spring,spring mvc,mybatis,spring boot等开源框架。 深入理解spring could,dubbo,zookeeper等开源框架的底层架构。</p>
                 <p> 熟练掌握Linux常用命令，生产环境服务器变慢诊断，线上排查，性能评估。</p>
-
             </section>
 
             <!-- 自我评价 -->
@@ -240,6 +239,22 @@
                 <p>能接受加班，能接受出差，乐于接受新技术，期待技术提高。</p>
                 <p>工作主动，责任心、执行力及抗压性强，能够积极的面对并解决工作中的问题。</p>
                 <p>勇于面对困难，迎接挑战，乐于学习新的知识，并对未来有充足的信心。</p>
+            </section>
+
+            <!-- 目标 -->
+            <section class="work info-unit">
+                <h2>
+                    <i class="fa fa-pencil" aria-hidden="true"></i>目标</h2>
+                <hr/>
+                <p>谷粒商城视频看完（目前分布式高级篇快速过一篇）</p>
+                <p>图灵学院视频看完（还未开始）</p>
+                <p><b>CSDN提升到博客专家（已达成）</b></p>
+                <p>多渠道视频教程涨粉一千（快手，抖音，B站，西瓜视频）</p>
+                <p>开辟副业(足够付房租)（摸索中）</p>
+                <p>成为高级开发工程师（技能学习中）</p>
+                <p>有一份产业，房贷还完（还贷中）</p>
+                <p>找个女朋友（这个急不来）</p>
+                <p> 独立开发一个大型分布式电商项目（至少主要功能完成）</p>
             </section>
         </section>
     </article>
