--- a/index.html
+++ b/index.html
@@ -107,22 +107,22 @@
                     <i class="fa fa-phone" aria-hidden="true"></i>联系方式</h2>
                 <hr/>
                 <ul>
-                    <li>
-                        <label>微信</label>
-                        <a href="" target="_blank">java_wxid</a>
-                    </li>
-                    <li>
-                        <label>QQ</label>
-                        <a href="" target="_blank">2469278741</a>
-                    </li>
+<!--                    <li>-->
+<!--                        <label>微信</label>-->
+<!--                        <a href="" target="_blank">java_wxid</a>-->
+<!--                    </li>-->
+<!--                    <li>-->
+<!--                        <label>QQ</label>-->
+<!--                        <a href="" target="_blank">2469278741</a>-->
+<!--                    </li>-->
 <!--                    <li>-->
 <!--                        <label><b>手机</b></label>-->
 <!--                        <a href="tel:17717299170" target="_blank">17717299170</a>-->
 <!--                    </li>-->
-                    <li>
-                        <label><b>邮箱</b></label>
-                        <a href="mailto:2469278741@qq.com" target="_blank">2469278741@qq.com</a>
-                    </li>
+<!--                    <li>-->
+<!--                        <label><b>邮箱</b></label>-->
+<!--                        <a href="mailto:2469278741@qq.com" target="_blank">2469278741@qq.com</a>-->
+<!--                    </li>-->
                     <li>
                         <label><b>个人主页</b></label>
                         <a href="http://139.224.137.74:8080/" target="_blank">动态网站</a>
@@ -163,16 +163,16 @@
                     <li>
                         <h3>
                             <span>湖南电子科技职业学院 - 软件工程专业（大专）</span>
-                            <time>2017.03.07-2019.06.30</time>
+<!--                            <time>2017.03.07-2019.06.30</time>-->
                         </h3>
-<!--                        <p>证书编号<mark>141225201906001202</mark></p>-->
+                        <p>证书编号<mark>141225201906001202</mark></p>
                     </li>
                     <li>
                         <h3>
                             <span>湖南工商大学 - 人力资源管理专业（本科）</span>
-                            <time>2017.03.07-2019.12.30</time>
+<!--                            <time>2017.03.07-2019.12.30</time>-->
                         </h3>
-<!--                        <p>证书编号<mark>65439117162003928</mark></p>-->
+                        <p>证书编号<mark>65439117162003928</mark></p>
                     </li>
                 </ul>
             </section>
@@ -234,10 +234,9 @@
                 <p>很多人给IT男贴标签，认为IT男闷，宅，忙，无趣，轴，直男，单纯，工资高，青春饭等。</p>
                 <p>接触下来他们是自律，爱学习，认真，有目标感，有使命感，努力，上进。</p>
                 <p>请善待每一个IT男，他们可能没你那么懂生活，因为他们有虚拟世界里的悲伤和孤独。</p>
-                <p>本人自学能力强，思维敏捷，对于新知识接受快。</p>
+                <p>再说说我自己吧：本人自学能力强，思维敏捷，对于新知识接受快。</p>
                 <p>为人诚恳，待人真诚，具有良好的团队合作精神和沟通组织能力，工作积极上进。</p>
-                <p>能接受加班，能接受出差，乐于接受新技术，期待技术提高。</p>
-                <p>工作主动，责任心、执行力及抗压性强，能够积极的面对并解决工作中的问题。</p>
+                <p>工作主动，责任心、执行力及抗压性强。</p>
                 <p>勇于面对困难，迎接挑战，乐于学习新的知识，并对未来有充足的信心。</p>
             </section>
 
@@ -263,7 +262,7 @@
 
     <footer class="footer">
         <p>© 2017 廖志伟.文档最后更新时间为
-            <time>2020年09月29日</time>.</p>
+            <time>2020年10月16日</time>.</p>
     </footer>
 
     <!-- 侧栏 -->
