--- a/index.html
+++ b/index.html
@@ -186,25 +186,25 @@
                     <li>
                         <h3>
                             <span>[经历1]上海优创融联计算机科技有限公司－java开发工程师（初级）</span>
-                            <time>2017.06 至 2018.03</time>
+<!--                            <time>2017.06 至 2018.03</time>-->
                         </h3>
                     </li>
                     <li>
                         <h3>
                             <span>[经历2]深圳市灵犀谷科技有限公司－java开发工程师（初级）</span>
-                            <time>2018.04-2019.03</time>
+<!--                            <time>2018.04-2019.03</time>-->
                         </h3>
                     </li>
                     <li>
                         <h3>
                             <span>[经历3]上海富总信息科技有限公司－java开发工程师（中级）</span>
-                            <time>2019.03-2019.12</time>
+<!--                            <time>2019.03-2019.12</time>-->
                         </h3>
                     </li>
                     <li>
                         <h3>
                             <span>[经历4]上海梦创双杨数据科技股份有限公司－java开发工程师（中级）</span>
-                            <time>2020.02-至今</time>
+<!--                            <time>2020.02-至今</time>-->
                         </h3>
                     </li>
                 </ul>
