--- a/index.html
+++ b/index.html
@@ -249,10 +249,10 @@
                 <p>图灵学院视频看完（还未开始）</p>
                 <p><b>CSDN提升到博客专家（已达成）</b></p>
                 <p>多渠道视频教程涨粉一千（快手，抖音，B站，西瓜视频）</p>
-                <p>开辟副业(足够付房租)（摸索中）</p>
+                <p>开辟副业(足够付房租)（CSDN付费专栏）</p>
                 <p>成为高级开发工程师（技能学习中）</p>
                 <p>有一份产业，房贷还完（还贷中）</p>
-                <p>找个女朋友（这个急不来）</p>
+                <p>找个女朋友（已达成）</p>
                 <p> 独立开发一个大型分布式电商项目（至少主要功能完成）</p>
             </section>
         </section>
@@ -262,7 +262,7 @@
 
     <footer class="footer">
         <p>© 2017 廖志伟.文档最后更新时间为
-            <time>2020年10月16日</time>.</p>
+            <time>2020年11月02日</time>.</p>
     </footer>
 
     <!-- 侧栏 -->
