--- a/index.html
+++ b/index.html
@@ -234,10 +234,13 @@
                 <p>很多人给IT男贴标签，认为IT男闷，宅，忙，无趣，轴，直男，单纯，工资高，青春饭等。</p>
                 <p>接触下来他们是自律，爱学习，认真，有目标感，有使命感，努力，上进。</p>
                 <p>请善待每一个IT男，他们可能没你那么懂生活，因为他们有虚拟世界里的悲伤和孤独。</p>
-                <p>再说说我自己吧：本人自学能力强，思维敏捷，对于新知识接受快。</p>
-                <p>为人诚恳，待人真诚，具有良好的团队合作精神和沟通组织能力，工作积极上进。</p>
-                <p>工作主动，责任心、执行力及抗压性强。</p>
-                <p>勇于面对困难，迎接挑战，乐于学习新的知识，并对未来有充足的信心。</p>
+                <p>再说说我自己吧：工作主动，责任心、执行力及抗压性强。勇于面对困难，迎接挑战，乐于学习新的知识，并对未来有充足的信心。</p>
+                <p>为人诚恳，待人真诚，以更包容开放的心态，观人、待事、接物。懂得克制自己，学会掌控人性里的欲望，抵得住花花世界的诱惑。</p>
+                <p>不把时间浪费在无意义的社交上，不把精力消耗在无关紧要的人身上。</p>
+                <p>就算生气，也不会暴跳如雷，摔桌子动手打人。就算失望，也不会就此低迷，坠入绝望深渊。就算伤心，也不会日夜买醉，整天以泪洗脸。</p>
+
+
+
             </section>
 
             <!-- 目标 -->
