--- a/index.html
+++ b/index.html
@@ -256,7 +256,8 @@
                 <p>成为高级开发工程师（技能学习中）</p>
                 <p>有一份产业，房贷还完（还贷中）</p>
                 <p>找个女朋友（已达成）</p>
-                <p> 独立开发一个大型分布式电商项目（至少主要功能完成）</p>
+                <p>独立开发一个大型分布式电商项目（至少主要功能完成）</p>
+                <p>全国旅游（真正意义上的一次全国旅游）</p>
             </section>
         </section>
     </article>
@@ -265,7 +266,7 @@
 
     <footer class="footer">
         <p>© 2017 廖志伟.文档最后更新时间为
-            <time>2020年11月02日</time>.</p>
+            <time>2020年11月03日</time>.</p>
     </footer>
 
     <!-- 侧栏 -->
