--- a/index.html
+++ b/index.html
@@ -254,8 +254,8 @@
                 <p>多渠道视频教程涨粉一千（快手，抖音，B站，西瓜视频）</p>
                 <p>开辟副业(足够付房租)（CSDN付费专栏）</p>
                 <p>成为高级开发工程师（技能学习中）</p>
-                <p>有一份产业，房贷还完（还贷中）</p>
-                <p>找个女朋友（已达成）</p>
+                <p>有一份产业，房贷还完（计划中）</p>
+                <p><b>找个女朋友（已达成）</b></p>
                 <p>独立开发一个大型分布式电商项目（至少主要功能完成）</p>
                 <p>全国旅游（真正意义上的一次全国旅游）</p>
             </section>
