--- a/index.html
+++ b/index.html
@@ -119,10 +119,10 @@
 <!--                        <label><b>手机</b></label>-->
 <!--                        <a href="tel:17717299170" target="_blank">17717299170</a>-->
 <!--                    </li>-->
-<!--                    <li>-->
-<!--                        <label><b>邮箱</b></label>-->
-<!--                        <a href="mailto:2469278741@qq.com" target="_blank">2469278741@qq.com</a>-->
-<!--                    </li>-->
+                    <li>
+                        <label><b>邮箱</b></label>
+                        <a href="mailto:2469278741@qq.com" target="_blank">2469278741@qq.com</a>
+                    </li>
                     <li>
                         <label><b>个人主页</b></label>
                         <a href="http://139.224.137.74:8080/" target="_blank">动态网站</a>
@@ -248,16 +248,15 @@
                 <h2>
                     <i class="fa fa-pencil" aria-hidden="true"></i>目标</h2>
                 <hr/>
-                <p>谷粒商城视频看完（目前分布式高级篇快速过一篇）</p>
-                <p>图灵学院视频看完（还未开始）</p>
-                <p><b>CSDN提升到博客专家（已达成）</b></p>
-                <p>多渠道视频教程涨粉一千（快手，抖音，B站，西瓜视频）</p>
-                <p>开辟副业(足够付房租)（CSDN付费专栏）</p>
+                <p>CSDN付费专栏</p>
+                <p>谷粒商城视频看完</p>
+                <p>图灵学院视频看完</p>
                 <p>成为高级开发工程师（技能学习中）</p>
-                <p>有一份产业，房贷还完（计划中）</p>
-                <p><b>找个女朋友（已达成）</b></p>
-                <p>独立开发一个大型分布式电商项目（至少主要功能完成）</p>
+                <p>在一线城市拥有一套房产（一百平以上）</p>
                 <p>全国旅游（真正意义上的一次全国旅游）</p>
+                <p>独立开发一个大型分布式电商项目（至少主要功能完成）</p>
+                <p>多渠道视频教程涨粉一千（快手，抖音，B站，西瓜视频）</p>
+                <p>实现个人财富自由</p>
             </section>
         </section>
     </article>
@@ -266,7 +265,7 @@
 
     <footer class="footer">
         <p>© 2017 廖志伟.文档最后更新时间为
-            <time>2020年11月03日</time>.</p>
+            <time>2020年12月21日</time>.</p>
     </footer>
 
     <!-- 侧栏 -->
