--- a/index.html
+++ b/index.html
@@ -257,6 +257,7 @@
                 <p>独立开发一个大型分布式电商项目（至少主要功能完成）</p>
                 <p>多渠道视频教程涨粉一千（快手，抖音，B站，西瓜视频）</p>
                 <p>实现个人财富自由</p>
+                <p>出书一本</p>
             </section>
         </section>
     </article>
@@ -265,7 +266,7 @@
 
     <footer class="footer">
         <p>© 2017 廖志伟.文档最后更新时间为
-            <time>2020年12月21日</time>.</p>
+            <time>2021年1月12日</time>.</p>
     </footer>
 
     <!-- 侧栏 -->
