--- a/index.html
+++ b/index.html
@@ -251,14 +251,48 @@
                 <p>CSDN付费专栏</p>
                 <p>谷粒商城视频看完</p>
                 <p>图灵学院视频看完</p>
-                <p>成为高级开发工程师（技能学习中）</p>
-                <p>在一线城市拥有一套房产（一百平以上）</p>
-                <p>全国旅游（真正意义上的一次全国旅游）</p>
                 <p>独立开发一个大型分布式电商项目（至少主要功能完成）</p>
                 <p>多渠道视频教程涨粉一千（快手，抖音，B站，西瓜视频）</p>
+                <p>成为高级开发工程师（技能学习中）</p>
+                <p>出书</p>
+                <p>在一线城市拥有一套房产（一百平以上）</p>
+                <p>全国旅游（真正意义上的一次全国旅游）</p>
                 <p>实现个人财富自由</p>
-                <p>出书一本</p>
+                <p>找个女朋友</p>
             </section>
+
+            <!-- 兴趣爱好 -->
+            <section class="work info-unit">
+                <h2>
+                    <i class="fa fa-pencil" aria-hidden="true"></i>兴趣爱好</h2>
+                <hr/>
+                <p>喜欢的电影：漫威系列</p>
+                <p>喜欢的动漫：超神学院</p>
+                <p>喜欢的小说：斗罗大陆</p>
+                <p>喜欢的游戏：王者荣耀</p>
+                <p>喜欢的球类运动：乒乓球</p>
+            </section>
+
+
+            <!-- 相亲 -->
+            <section class="work info-unit">
+                <h2>
+                    <i class="fa fa-pencil" aria-hidden="true"></i>相亲</h2>
+                <hr/>
+                <p>年龄：97年</p>
+                <p>身高：180cm</p>
+                <p>颜值：中上</p>
+                <p>最高学历：本科</p>
+                <p>职业：Java开发工程师</p>
+                <p>荣誉称号：CSDN博客专家</p>
+                <p>月薪：一万六</p>
+                <p>老家：湖南</p>
+                <p>工作地点：上海浦东新区</p>
+                <p>待过的城市：衡阳，长沙，广州，深圳，佛山，上海，南昌，杭州，德清</p>
+                <p>资产：20年在老家已经买房（118平）</p>
+                <p>加分项：会做饭，会理财，不是月光族，有存钱的意识，有职业规划，喜欢做总结，孝顺，专一，负责，自律，爱学习，认真，有目标感，有使命感，努力，上进，不抽烟，不喝酒，不嚼槟榔，不打呼噜，无不良嗜好，没有纹身，不逛酒吧夜店。</p>
+            </section>
+
         </section>
     </article>
 
@@ -266,7 +300,7 @@
 
     <footer class="footer">
         <p>© 2017 廖志伟.文档最后更新时间为
-            <time>2021年1月12日</time>.</p>
+            <time>2021年2月4日</time>.</p>
     </footer>
 
     <!-- 侧栏 -->
