--- a/index.html
+++ b/index.html
@@ -266,11 +266,11 @@
                 <h2>
                     <i class="fa fa-pencil" aria-hidden="true"></i>兴趣爱好</h2>
                 <hr/>
-                <p>喜欢的电影：漫威系列</p>
-                <p>喜欢的动漫：超神学院</p>
-                <p>喜欢的小说：斗罗大陆</p>
-                <p>喜欢的游戏：王者荣耀</p>
-                <p>喜欢的球类运动：乒乓球</p>
+                <p>喜欢的电影：漫威系列，隐秘而伟大</p>
+                <p>喜欢的动漫：超神学院，秦时明月</p>
+                <p>喜欢的小说：斗罗大陆，三体，三寸人间</p>
+                <p>喜欢的游戏：王者荣耀，吃鸡</p>
+                <p>喜欢的球类运动：乒乓球，篮球，羽毛球</p>
             </section>
 
 
@@ -290,7 +290,7 @@
                 <p>工作地点：上海浦东新区</p>
                 <p>待过的城市：衡阳，长沙，广州，深圳，佛山，上海，南昌，杭州，德清</p>
                 <p>资产：20年在老家已经买房（118平）</p>
-                <p>加分项：会做饭，会理财，不是月光族，有存钱的意识，有职业规划，喜欢做总结，孝顺，专一，负责，自律，爱学习，认真，有目标感，有使命感，努力，上进，不抽烟，不喝酒，不嚼槟榔，不打呼噜，无不良嗜好，没有纹身，不逛酒吧夜店。</p>
+                <p>加分项：会做饭，会理财，不是月光族，有存钱的意识，有职业规划，喜欢做总结，孝顺，专一，负责，自律，爱学习，认真，有目标感，有使命感，努力，上进，不抽烟，不喝酒，不嚼槟榔，不打呼噜，无不良嗜好，没有纹身，不逛酒吧夜店，爱干净，有礼貌，懂得谦让。</p>
             </section>
 
         </section>
