--- a/index.html
+++ b/index.html
@@ -111,10 +111,10 @@
 <!--                        <label>微信</label>-->
 <!--                        <a href="" target="_blank">java_wxid</a>-->
 <!--                    </li>-->
-<!--                    <li>-->
-<!--                        <label>QQ</label>-->
-<!--                        <a href="" target="_blank">2469278741</a>-->
-<!--                    </li>-->
+                    <li>
+                        <label>QQ</label>
+                        <a href="" target="_blank">2469278741</a>
+                    </li>
 <!--                    <li>-->
 <!--                        <label><b>手机</b></label>-->
 <!--                        <a href="tel:17717299170" target="_blank">17717299170</a>-->
