--- a/index.html
+++ b/index.html
@@ -88,15 +88,19 @@
                 <ul>
                     <li>
                         <label>个人信息</label>
-                        <span>廖志伟 / 男 / 97年</span>
+                        <span>廖志伟 / 男 / 1997年</span>
                     </li>
                     <li>
-                        <label>英语水平</label>
-                        <span>CET-4</span>
+                        <label>身高</label>
+                        <span>180cm</span>
                     </li>
                     <li>
-                        <label>计算机水平</label>
-                        <span>中级</span>
+                        <label>学历</label>
+                        <span>本科</span>
+                    </li>
+                    <li>
+                        <label>职业</label>
+                        <span>Java开发工程师</span>
                     </li>
                 </ul>
             </section>
@@ -107,25 +111,49 @@
                     <i class="fa fa-phone" aria-hidden="true"></i>联系方式</h2>
                 <hr/>
                 <ul>
-<!--                    <li>-->
-<!--                        <label>微信</label>-->
-<!--                        <a href="" target="_blank">java_wxid</a>-->
-<!--                    </li>-->
+                    <li>
+                        <label>微信</label>
+                        <a href="https://wx.qq.com/" target="_blank">java_wxid</a>
+                    </li>
                     <li>
                         <label>QQ</label>
                         <a href="" target="_blank">2469278741</a>
                     </li>
-<!--                    <li>-->
-<!--                        <label><b>手机</b></label>-->
-<!--                        <a href="tel:17717299170" target="_blank">17717299170</a>-->
-<!--                    </li>-->
+                    <li>
+                        <label><b>手机</b></label>
+                        <a href="tel:17717299170" target="_blank">17717299170</a>
+                    </li>
                     <li>
                         <label><b>邮箱</b></label>
                         <a href="mailto:2469278741@qq.com" target="_blank">2469278741@qq.com</a>
                     </li>
                     <li>
-                        <label><b>个人主页</b></label>
-                        <a href="http://139.224.137.74:8080/" target="_blank">动态网站</a>
+                        <label><b>知乎</b></label>
+                        <a href="https://www.zhihu.com/people/javawei-xin-id" target="_blank">javawxid</a>
+                    </li>
+                    <li>
+                        <label><b>CSDN</b></label>
+                        <a href="https://blog.csdn.net/java_wxid" target="_blank">java小丑</a>
+                    </li>
+                    <li>
+                        <label><b>掘金</b></label>
+                        <a href="https://juejin.cn/user/3290187978253431" target="_blank">java_wxid</a>
+                    </li>
+                    <li>
+                        <label><b>博客园</b></label>
+                        <a href="https://www.cnblogs.com/liaozhiwei/" target="_blank">liaozhiwei</a>
+                    </li>
+                    <li>
+                        <label><b>马克java社区</b></label>
+                        <a href="http://www.mark-to-win.com/TeacherV2.html?id=34" target="_blank">java小丑</a>
+                    </li>
+                    <li>
+                        <label><b>InfoQ</b></label>
+                        <a href="https://www.infoq.cn/u/liaozhiwei/publish" target="_blank">java_wxid</a>
+                    </li>
+                    <li>
+                        <label><b>简书</b></label>
+                        <a href="https://www.jianshu.com/u/291aeb531f8b" target="_blank">java小丑</a>
                     </li>
                     <li>
                         <label><b>码云</b></label>
@@ -134,10 +162,6 @@
                     <li>
                         <label><b>Github</b></label>
                         <a href="https://github.com/javaliao" target="_blank">javaliao</a>
-                    </li>
-                    <li>
-                        <label><b>CSDN</b></label>
-                        <a href="https://blog.csdn.net/java_wxid" target="_blank">java小丑</a>
                     </li>
                 </ul>
             </section>
@@ -163,14 +187,14 @@
                     <li>
                         <h3>
                             <span>湖南电子科技职业学院 - 软件工程专业（大专）</span>
-<!--                            <time>2017.03.07-2019.06.30</time>-->
+                            <time>2017.03.07-2019.06.30</time>
                         </h3>
                         <p>证书编号<mark>141225201906001202</mark></p>
                     </li>
                     <li>
                         <h3>
                             <span>湖南工商大学 - 人力资源管理专业（本科）</span>
-<!--                            <time>2017.03.07-2019.12.30</time>-->
+                            <time>2017.03.07-2019.12.30</time>
                         </h3>
                         <p>证书编号<mark>65439117162003928</mark></p>
                     </li>
@@ -186,25 +210,31 @@
                     <li>
                         <h3>
                             <span>[经历1]上海优创融联计算机科技有限公司－java开发工程师（初级）</span>
-<!--                            <time>2017.06 至 2018.03</time>-->
+                            <time>2017.12 至 2018.03</time>
                         </h3>
                     </li>
                     <li>
                         <h3>
                             <span>[经历2]深圳市灵犀谷科技有限公司－java开发工程师（初级）</span>
-<!--                            <time>2018.04-2019.03</time>-->
+                            <time>2019.03-2019.06</time>
                         </h3>
                     </li>
                     <li>
                         <h3>
                             <span>[经历3]上海富总信息科技有限公司－java开发工程师（中级）</span>
-<!--                            <time>2019.03-2019.12</time>-->
+                            <time>2019.09-2019.12</time>
                         </h3>
                     </li>
                     <li>
                         <h3>
                             <span>[经历4]上海梦创双杨数据科技股份有限公司－java开发工程师（中级）</span>
-<!--                            <time>2020.02-至今</time>-->
+                            <time>2020.02-2021.04</time>
+                        </h3>
+                    </li>
+                    <li>
+                        <h3>
+                            <span>[经历5]上海塔莫信息科技有限公司－java开发工程师（高级）</span>
+                            <time>2021.04-至今</time>
                         </h3>
                     </li>
                 </ul>
@@ -238,9 +268,6 @@
                 <p>为人诚恳，待人真诚，以更包容开放的心态，观人、待事、接物。懂得克制自己，学会掌控人性里的欲望，抵得住花花世界的诱惑。</p>
                 <p>不把时间浪费在无意义的社交上，不把精力消耗在无关紧要的人身上。</p>
                 <p>就算生气，也不会暴跳如雷，摔桌子动手打人。就算失望，也不会就此低迷，坠入绝望深渊。就算伤心，也不会日夜买醉，整天以泪洗脸。</p>
-
-
-
             </section>
 
             <!-- 目标 -->
@@ -288,9 +315,6 @@
         <ul>
             <li>
                 <a href="https://github.com/BoomManager/BoomManager.github.io" target="_blank">源代码</a>
-            </li>
-            <li>
-                <a href="http://139.224.137.74/" target="_blank">动态网站</a>
             </li>
         </ul>
     </aside>
