--- a/index.html
+++ b/index.html
@@ -132,6 +132,10 @@
                         <a href="https://www.zhihu.com/people/javawei-xin-id" target="_blank">javawxid</a>
                     </li>
                     <li>
+                        <label><b>哔哩哔哩</b></label>
+                        <a href="https://space.bilibili.com/353586723" target="_blank">java_wxid</a>
+                    </li>
+                    <li>
                         <label><b>CSDN</b></label>
                         <a href="https://blog.csdn.net/java_wxid" target="_blank">java小丑</a>
                     </li>
