--- a/index.html
+++ b/index.html
@@ -132,8 +132,12 @@
                         <a href="https://www.zhihu.com/people/javawei-xin-id" target="_blank">javawxid</a>
                     </li>
                     <li>
+                        <label><b>哔哩哔哩</b></label>
+                        <a href="https://space.bilibili.com/353586723" target="_blank">java_wxid</a>
+                    </li>
+                    <li>
                         <label><b>CSDN</b></label>
-                        <a href="https://blog.csdn.net/java_wxid" target="_blank">java小丑</a>
+                        <a href="https://blog.csdn.net/java_wxid" target="_blank">java小丑（博客专家）</a>
                     </li>
                     <li>
                         <label><b>掘金</b></label>
@@ -145,7 +149,7 @@
                     </li>
                     <li>
                         <label><b>马克java社区</b></label>
-                        <a href="http://www.mark-to-win.com/TeacherV2.html?id=34" target="_blank">java小丑</a>
+                        <a href="http://www.mark-to-win.com/TeacherV2.html?id=34" target="_blank">java小丑（教学老师）</a>
                     </li>
                     <li>
                         <label><b>InfoQ</b></label>
@@ -275,13 +279,13 @@
                 <h2>
                     <i class="fa fa-pencil" aria-hidden="true"></i>目标</h2>
                 <hr/>
-                <p>CSDN付费专栏</p>
+                <p>CSDN付费专栏（已达成）</p>
                 <p>谷粒商城视频看完</p>
                 <p>图灵学院视频看完</p>
                 <p>独立开发一个大型分布式电商项目（至少主要功能完成）</p>
-                <p>多渠道视频教程涨粉一千（快手，抖音，B站，西瓜视频）</p>
-                <p>成为高级开发工程师（技能学习中）</p>
-                <p>出书</p>
+                <p>涨粉一千（已达成）</p>
+                <p>成为高级开发工程师（已达成）</p>
+                <p>出版书籍</p>
                 <p>在一线城市拥有一套房产（一百平以上）</p>
                 <p>全国旅游（真正意义上的一次全国旅游）</p>
                 <p>实现个人财富自由</p>
@@ -295,10 +299,25 @@
                 <p>喜欢的电影：漫威系列，隐秘而伟大</p>
                 <p>喜欢的动漫：超神学院，秦时明月</p>
                 <p>喜欢的小说：斗罗大陆，三体，三寸人间</p>
-                <p>喜欢的游戏：王者荣耀，吃鸡</p>
+                <p>喜欢的游戏：王者荣耀，QQ飞车</p>
                 <p>喜欢的球类运动：乒乓球，篮球，羽毛球</p>
             </section>
 
+            <!-- 个人情况 -->
+            <section class="work info-unit">
+                <h2>
+                    <i class="fa fa-pencil" aria-hidden="true"></i>个人情况</h2>
+                <hr/>
+                <p>月薪：税后二万</p>
+                <p>老家：湖南衡阳</p>
+                <p>房产：20年年底在衡阳石鼓区万阳和府购房118平</p>
+                <p>工作地点：上海黄埔区（离陆家嘴三公里）</p>
+                <p>待过的城市：衡阳，长沙，广州，深圳，佛山，上海，南昌，杭州，德清</p>
+                <p>身体素质：跑过半程马拉松</p>
+                <p>性格：亲和力强，时而努力，时而松懈，积极阳光</p>
+                <p>生活技能：会做饭，会家务</p>
+                <p>心智：比较佛系，很会谦让，原则问题也会有自己的主见</p>
+            </section>
 
         </section>
     </article>
