--- a/index.html
+++ b/index.html
@@ -280,15 +280,15 @@
                     <i class="fa fa-pencil" aria-hidden="true"></i>目标</h2>
                 <hr/>
                 <p>CSDN付费专栏（已达成）</p>
-                <p>谷粒商城视频看完</p>
-                <p>图灵学院视频看完</p>
-                <p>独立开发一个大型分布式电商项目（至少主要功能完成）</p>
+                <p>谷粒商城视频看完（学习中）</p>
+                <p>图灵学院视频看完（学习中）</p>
+                <p>独立开发高并发分布式项目（未开始）</p>
                 <p>涨粉一千（已达成）</p>
                 <p>成为高级开发工程师（已达成）</p>
-                <p>出版书籍</p>
+                <p>出版书籍（编写中）</p>
                 <p>在一线城市拥有一套房产（一百平以上）</p>
                 <p>全国旅游（真正意义上的一次全国旅游）</p>
-                <p>实现个人财富自由</p>
+                <p>实现个人财富自由（做梦中）</p>
             </section>
 
             <!-- 兴趣爱好 -->
@@ -299,7 +299,7 @@
                 <p>喜欢的电影：漫威系列，隐秘而伟大</p>
                 <p>喜欢的动漫：超神学院，秦时明月</p>
                 <p>喜欢的小说：斗罗大陆，三体，三寸人间</p>
-                <p>喜欢的游戏：王者荣耀，QQ飞车</p>
+                <p>喜欢的游戏：王者荣耀，QQ飞车，穿越火线</p>
                 <p>喜欢的球类运动：乒乓球，篮球，羽毛球</p>
             </section>
 
@@ -326,7 +326,7 @@
 
     <footer class="footer">
         <p>© 2017 廖志伟.文档最后更新时间为
-            <time>2021年5月16日</time>.</p>
+            <time>2021年5月24日</time>.</p>
     </footer>
 
     <!-- 侧栏 -->
