--- a/index.html
+++ b/index.html
@@ -319,6 +319,63 @@
                 <p>心智：比较佛系，很会谦让，原则问题也会有自己的主见</p>
             </section>
 
+
+            <!-- 个人情况 -->
+            <section class="work info-unit">
+                <h2>
+                    <i class="fa fa-pencil" aria-hidden="true"></i>自媒体</h2>
+                <hr/>
+                <p>个人网站：待定</p>
+                <p>公众号：南北踏尘</p>
+                <p>今日头条：https://www.toutiao.com/c/user/token/MS4wLjABAAAArQYj7pLVDM3Pf0Zqp1m50Be1yIbgLat5cKIobMsaHH3WORMNY3v1FzRLPp3cIRtJ/</p>
+                <p>抖音：java_wxid</p>
+                <p>快手：IAMJAVARD</p>
+                <p>小红书：1047602153</p>
+                <p>豆瓣：https://www.douban.com/</p>
+                <p>百家号：https://baijiahao.baidu.com/</p>
+                <p>企鹅号：https://om.qq.com/userAuth/index</p>
+                <p>大鱼号：https://mp.dayu.com/</p>
+                <p>贴吧：https://tieba.baidu.com/index.html</p>
+                <p>西瓜视频：https://www.ixigua.com/</p>
+                <p>趣头条：https://mp.qutoutiao.net/login</p>
+                <p>东方头条：http://mp.tt.cn/</p>
+                <p>网易号：https://mp.163.com/login.html</p>
+                <p>一点资讯：https://www.yidianzixun.com/</p>
+                <p>惠头条：http://www.cashtoutiao.com/</p>
+                <p>搜狐号：https://mp.sohu.com/mpfe/v3/login</p>
+                <p>新浪看点：http://mp.sina.com.cn</p>
+                <p>五条号：https://www.miaosong.cn/wutiaohao/</p>
+                <p>来往公众号：https://pp.laiwang.com/user/login.htm</p>
+                <p>易信公众号：http://open.yixin.im/</p>
+                <p>大风号：https://mp.ifeng.com/login</p>
+                <p>360doc个人图书馆：http://www.360doc.com/index.html</p>
+                <p>百度经验：https://jingyan.baidu.com/</p>
+                <p>百度文库：https://wenku.baidu.com/</p>
+                <p>百度知道：https://zhidao.baidu.com/</p>
+                <p>天涯：https://www.tianya.cn/</p>
+                <p>虎扑：https://www.hupu.com/</p>
+                <p>美篇：https://www.meipian.cn/</p>
+
+                <p>技术相关：</p>
+                <p>CSDN：https://blog.csdn.net/java_wxid</p>
+                <p>知乎：https://www.zhihu.com/people/javawei-xin-id</p>
+                <p>哔哩哔哩：https://space.bilibili.com/353586723</p>
+                <p>掘金：https://juejin.cn/user/3290187978253431</p>
+                <p>博客园：https://www.cnblogs.com/liaozhiwei/</p>
+                <p>腾讯云社区：https://cloud.tencent.com/developer/user/5598481</p>
+                <p>码云：https://gitee.com/java_wxid</p>
+                <p>Github：https://github.com/javaliao</p>
+                <p>开源中国：https://my.oschina.net/u/3969122</p>
+                <p>微博：https://weibo.com/7296196355/profile?topnav=1&wvr=6</p>
+                <p>马克java社区：http://www.mark-to-win.com/TeacherV2.html?id=34</p>
+                <p>InfoQ：https://www.infoq.cn/u/liaozhiwei/publish</p>
+                <p>简书：https://www.jianshu.com/u/291aeb531f8b</p>
+                <p>51cto：https://home.51cto.com/space?uid=15231602</p>
+                <p>思否：https://segmentfault.com/u/java_wxid</p>
+                <p>chinaunix：http://blog.chinaunix.net/uid/70001232.html</p>
+                <p>知识星球：https://wx.zsxq.com/dweb2/login</p>
+            </section>
+            object idletime
         </section>
     </article>
 
