--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
         </section>
 
 
-        <!-- 个人情况 -->
+        <!-- 自媒体 -->
         <section class="work info-unit">
             <h2>
                 <i class="fa fa-pencil" aria-hidden="true"></i>自媒体</h2>
