--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
             <hr/>
             <p>个人网站：待定</p>
             <p>公众号：南北踏尘</p>
-            <p>今日头条：https://www.toutiao.com/c/user/token/MS4wLjABAAAArQYj7pLVDM3Pf0Zqp1m50Be1yIbgLat5cKIobMsaHH3WORMNY3v1FzRLPp3cIRtJ/</p>
+            <p>今日头条：https://www.toutiao.com/</p>
             <p>抖音：java_wxid</p>
             <p>快手：IAMJAVARD</p>
             <p>小红书：1047602153</p>
