--- a/index.html
+++ b/index.html
@@ -283,20 +283,22 @@
             <h2>
                 <i class="fa fa-pencil" aria-hidden="true">职业技能</i></h2>
             <hr/>
-            <p>具备扎实的Java基础，熟练掌握javaIO流，集合，反射，泛型，注解，网络编程，多线程等基础开发技术。</p>
-            <p>深入理解JVM底层原理，JMM内存模型，垃圾回收机制，GC算法，熟悉JVM各种垃圾回收器的使用以及核心参数调优，有过一定JVM线上调优经验，对JVM调优有自己独到的见解。</p>
-            <p>深入理解Spring，Spring MVC，Mybatis等开源框架的设计原理以及底层架构，研究过部分核心源码，具备一定的框架定制开发能力。</p>
-            <p>深入理解Spring Boot，Spring Could，Dubbo等开源框架的设计原理以及底层架构，研究过部分核心源码，具备一定的框架定制开发能力。</p>
-            <p>深入理解MySQL（索引数据结构，B+ tree索引特点以及数据库事务的隔离级别，传播行为，数据库死锁，数据迁移，分库分表，读写分离，主从复制，灾难备份）等。</p>
-            <p>深入理解Redis（版本间的区别，redisObject属性，简单字符串，链表，字典，跳跃表，整数集合，压缩列表，回收机制，线程模型，分布式寻址算法，过期策略，数据一致性，多级缓存架构，热点数据缓存，并发竞争，哨兵模式，主从复制，集群模式等），具有集群架构及高可用相关经验，熟悉各种缓存高并发的使用场景，比如，热点缓存重构，缓存雪崩，缓存穿透，缓存失效。</p>
-            <p>熟悉常见消息中间件的使用，解决过各种消息通讯场景的疑难问题。比如，高可用，消息丢失，消息消费的幂等性，顺序性，消息延迟，过期失效，消息队列满了等问题。</p>
-            <p>熟悉设计模式，Leetcode算法以及常见的数据结构，熟悉HTTP协议，TCPIP协议，OAUTH2协议等。</p>
-            <p>对于各种高性能IO通信模型以及相关开源组件Netty等源码有过深度研究，理解NIO与Netty线程模型，深入Hotspot源码与Linux内核，熟悉百万级并发服务器架构的设计。</p>
-            <p>在项目中解决过各种分布式场景的技术难题，比如分布式锁，分布式事务，分布式Session，分布式任务，分库分表。</p>
-            <p>具备0-1搭建微服务、高可用、高并发、分布式项目架构。具备环境搭建，自动化部署，产品需求讨论，任务分配，Code审查，负责指导、培训普通开发工程师，审核开发工程师的设计与研发质量等经验。具备项目管理、需求分析、文档编写、原型设计等基本的文档输出能力。</p>
-            <p>有着大量的第三方对接经验，比如：Alibaba，Wechat，Facebook，Google，Apple，infobip等。</p>
-            <p>具备生产环境服务器变慢诊断，线上排查，性能评估，Linux常用命令，Docker容器化，Jenkins自动化部署，k8s云原生，Skywalking分布式追踪系统，ElasticSearch全文搜索，Mongodb非关系性数据库，达梦国产化数据库，高性能图数据库Neo4j，spring security oauth2权限框架，swagger在线文档，gateway和Kong网关，i18n国际化，James邮件服务器，FastDFS分布式文件存储，Activiti工作流，页面模板引擎，Nginx负载均衡，Zookeeper分布式服务框架等后端相关技术。</p>
-            <p>热爱技术，工作认真、严谨，对系统质量有近乎苛刻的要求意识。责任心强、重视团队合作，具备良好的沟通协调及推动能力，能承担较大的压力。有很强的分析问题和解决问题的能力，有强烈的责任心。</p>
+            <ul>
+                <li><span>具备扎实的Java基础，熟练掌握javaIO流，集合，反射，泛型，注解，网络编程，多线程等基础开发技术。</span></li>
+                <li><span>深入理解JVM底层原理，JMM内存模型，垃圾回收机制，GC算法，熟悉JVM各种垃圾回收器的使用以及核心参数调优，有过一定JVM线上调优经验，对JVM调优有自己独到的见解。</span></li>
+                <li><span>深入理解Spring，Spring MVC，Mybatis等开源框架的设计原理以及底层架构，研究过部分核心源码，具备一定的框架定制开发能力。</span></li>
+                <li><span>深入理解Spring Boot，Spring Could，Dubbo等开源框架的设计原理以及底层架构，研究过部分核心源码，具备一定的框架定制开发能力。</span></li>
+                <li><span>深入理解MySQL（索引数据结构，B+ tree索引特点以及数据库事务的隔离级别，传播行为，数据库死锁，数据迁移，分库分表，读写分离，主从复制，灾难备份）等。</span></li>
+                <li><span>深入理解Redis（版本间的区别，redisObject属性，简单字符串，链表，字典，跳跃表，整数集合，压缩列表，回收机制，线程模型，分布式寻址算法，过期策略，数据一致性，多级缓存架构，热点数据缓存，并发竞争，哨兵模式，主从复制，集群模式等），具有集群架构及高可用相关经验，熟悉各种缓存高并发的使用场景，比如，热点缓存重构，缓存雪崩，缓存穿透，缓存失效。</span></li>
+                <li><span>熟悉常见消息中间件的使用，解决过各种消息通讯场景的疑难问题。比如，高可用，消息丢失，消息消费的幂等性，顺序性，消息延迟，过期失效，消息队列满了等问题。</span></li>
+                <li><span>熟悉设计模式，Leetcode算法以及常见的数据结构，熟悉HTTP协议，TCPIP协议，OAUTH2协议等。</span></li>
+                <li><span>对于各种高性能IO通信模型以及相关开源组件Netty等源码有过深度研究，理解NIO与Netty线程模型，深入Hotspot源码与Linux内核，熟悉百万级并发服务器架构的设计。</span></li>
+                <li><span>在项目中解决过各种分布式场景的技术难题，比如分布式锁，分布式事务，分布式Session，分布式任务，分库分表。</span></li>
+                <li><span>具备0-1搭建微服务、高可用、高并发、分布式项目架构。具备环境搭建，自动化部署，产品需求讨论，任务分配，Code审查，负责指导、培训普通开发工程师，审核开发工程师的设计与研发质量等经验。具备项目管理、需求分析、文档编写、原型设计等基本的文档输出能力。</span></li>
+                <li><span>有着大量的第三方对接经验，比如：Alibaba，Wechat，Facebook，Google，Apple，infobip等。</span></li>
+                <li><span>具备生产环境服务器变慢诊断，线上排查，性能评估，Linux常用命令，Docker容器化，Jenkins自动化部署，k8s云原生，Skywalking分布式追踪系统，ElasticSearch全文搜索，Mongodb非关系性数据库，达梦国产化数据库，高性能图数据库Neo4j，spring security oauth2权限框架，swagger在线文档，gateway和Kong网关，i18n国际化，James邮件服务器，FastDFS分布式文件存储，Activiti工作流，页面模板引擎，Nginx负载均衡，Zookeeper分布式服务框架等后端相关技术。</span></li>
+                <li><span>热爱技术，工作认真、严谨，对系统质量有近乎苛刻的要求意识。责任心强、重视团队合作，具备良好的沟通协调及推动能力，能承担较大的压力。有很强的分析问题和解决问题的能力，有强烈的责任心。</span></li>
+            </ul>
         </section>
 
 
