--- a/index.html
+++ b/index.html
@@ -64,18 +64,10 @@
         <!-- 个人肖像 -->
         <section class="me">
             <section class="portrait">
-<!--                <div class="loading">-->
-<!--                    <span>-->
-<!--                        &lt;!&ndash; 头像照片 &ndash;&gt;-->
-<!--                        <img class="avatar" src="http://hadoop-mall.oss-cn-shanghai.aliyuncs.com/liaozhiwei02.jpg?Expires=1915696996&OSSAccessKeyId=LTAI4G2Ch1kRCTQ7uP5P3eQ1&Signature=fzwf4dKCWAgABlJFpxVBMPq0wVI%3D" onload="loading()">-->
-<!--                    </span>-->
-<!--                    <span></span>-->
-<!--                    <span></span>-->
-<!--                    <span></span>-->
-<!--                    <span></span>-->
-<!--                </div>-->
-                <!-- 头像照片 -->
-                <img class="avatar" src="http://hadoop-mall.oss-cn-shanghai.aliyuncs.com/liaozhiwei02.jpg?Expires=1915696996&OSSAccessKeyId=LTAI4G2Ch1kRCTQ7uP5P3eQ1&Signature=fzwf4dKCWAgABlJFpxVBMPq0wVI%3D" onload="loading()">
+                <div class="loading">
+                    <!-- 头像照片 -->
+                    <img class="avatar" src="http://hadoop-mall.oss-cn-shanghai.aliyuncs.com/liaozhiwei02.jpg?Expires=1915696996&OSSAccessKeyId=LTAI4G2Ch1kRCTQ7uP5P3eQ1&Signature=fzwf4dKCWAgABlJFpxVBMPq0wVI%3D" onload="loading()">
+                </div>
             </section>
 
             <h1 class="name">廖志伟</h1>
