--- a/index.html
+++ b/index.html
@@ -176,7 +176,6 @@
     </section>
 
     <section class="main">
-
         <!-- 教育经历 -->
         <section class="edu info-unit">
             <h2>
@@ -184,18 +183,14 @@
             <hr/>
             <ul>
                 <li>
-                    <h3>
-                        <span>湖南电子科技职业学院 - 软件工程专业（大专）- （自考）</span>
-                        <time>2017.03.07-2019.06.30</time>
-                    </h3>
-                    <p>证书编号<mark>141225201906001202</mark></p>
+                    <span>湖南电子科技职业学院 - 软件工程专业（大专）- （自考）</span>
+                    <time>2017.03.07-2019.06.30</time>
+                    <p>证书编号：<mark>141225201906001202</mark></p>
                 </li>
                 <li>
-                    <h3>
-                        <span>湖南工商大学 - 人力资源管理专业（本科）- （自考）</span>
-                        <time>xxxx.xx.xx-2019.12.30</time>
-                    </h3>
-                    <p>证书编号<mark>65439117162003928</mark></p>
+                    <span>湖南工商大学 - 人力资源管理专业（本科）- （自考）</span>
+                    <time>xxxx.xx.xx-2019.12.30</time>
+                    <p>证书编号：<mark>65439117162003928</mark></p>
                 </li>
             </ul>
         </section>
@@ -207,38 +202,29 @@
             <hr/>
             <ul>
                 <li>
-                    <h3>
-                        <span>[经历1]上海优创融联计算机科技有限公司－java开发工程师（初级）</span>
-                        <time>2017.12 至 2018.03</time>
-                        <span>离职原因：个人专业技能不强，转正后半个月主动离职去学习</span>
-                    </h3>
+                    <span>[经历1]上海优创融联计算机科技有限公司－java开发工程师（初级）</span>
+                    <time>2017.12 至 2018.03</time>
+                    <span>离职原因：个人专业技能不强，转正后半个月主动离职去学习</span>
                 </li>
                 <li>
-                    <h3>
-                        <span>[经历2]深圳市灵犀谷科技有限公司－java开发工程师（初级）</span>
-                        <time>2019.03-2019.06</time>
-                        <span>离职原因：薪资压榨，福利待遇未落实，假大空</span>
-                    </h3>
+                    <span>[经历2]深圳市灵犀谷科技有限公司－java开发工程师（初级）</span>
+                    <time>2019.03-2019.06</time>
+                    <span>离职原因：薪资压榨，福利待遇未落实，假大空</span>
                 </li>
                 <li>
-                    <h3>
-                        <span>[经历3]上海富总信息科技有限公司－java开发工程师（中级）</span>
-                        <time>2019.09-2019.12</time>
-                        <span>离职原因：老板资金链断了，项目组解散</span>
-                    </h3>
+                    <span>[经历3]上海富总信息科技有限公司－java开发工程师（中级）</span>
+                    <time>2019.09-2019.12</time>
+                    <span>离职原因：老板资金链断了，项目组解散</span>
                 </li>
                 <li>
-                    <h3>
-                        <span>[经历4]上海梦创双杨数据科技股份有限公司－java开发工程师（中级）</span>
-                        <time>2020.02-2021.04</time>
-                        <span>离职原因：连续通宵次数太多，太伤身体，无效加班次数太多</span>
-                    </h3>
+                    <span>[经历4]上海梦创双杨数据科技股份有限公司－java开发工程师（中级）</span>
+                    <time>2020.02-2021.04</time>
+                    <span>离职原因：连续通宵次数太多，太伤身体，无效加班次数太多</span>
                 </li>
                 <li>
-                    <h3>
-                        <span>[经历5]上海塔莫信息科技有限公司－java开发工程师（高级）</span>
-                        <time>2021.04-至今</time>
-                    </h3>
+                    <span>[经历5]上海塔莫信息科技有限公司－java开发工程师（高级）</span>
+                    <time>2021.04-至今</time>
+                    <span>离职原因：还未离职</span>
                 </li>
             </ul>
         </section>
