--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <section class="portrait">
                 <div class="loading">
                     <!-- 头像照片 -->
-                    <img class="avatar" src="http://hadoop-mall.oss-cn-shanghai.aliyuncs.com/liaozhiwei02.jpg?Expires=1915696996&OSSAccessKeyId=LTAI4G2Ch1kRCTQ7uP5P3eQ1&Signature=fzwf4dKCWAgABlJFpxVBMPq0wVI%3D" onload="loading()">
+                    <img class="avatar" src="https://g8-group.s3.eu-central-1.amazonaws.com/12.jpg" onload="loading()">
                 </div>
             </section>
 
@@ -169,7 +169,7 @@
         <section class="qrcode info-unit">
             <h2><i class="fa fa-qrcode" aria-hidden="true"></i>二维码</h2>
             <hr/>
-            <img src="http://hadoop-mall.oss-cn-shanghai.aliyuncs.com/1.jpg?Expires=1916722548&OSSAccessKeyId=LTAI4G2Ch1kRCTQ7uP5P3eQ1&Signature=DKaUZ5JKsRjeE%2FEr7zjAfAQ1GtA%3D" style="width: 100%;" alt="">
+            <img src="https://g8-group.s3.eu-central-1.amazonaws.com/23.jpg" style="width: 100%;" alt="">
         </section>
 
 
