--- a/index.html
+++ b/index.html
@@ -107,11 +107,11 @@
             <hr/>
             <ul>
                 <li>
-                    <label>微信</label>
+                    <label><b>微信</b></label>
                     <a href="https://wx.qq.com/" target="_blank">java_wxid</a>
                 </li>
                 <li>
-                    <label>QQ</label>
+                    <label><b>QQ</b></label>
                     <a href="" target="_blank">2469278741</a>
                 </li>
                 <li>
